[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Background/Esileht/Nupp_edasi_all.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Esileht/Nupp_katkesta.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/Esileht/Nupp_katkesta_all.png" type="Texture" id=3]
[ext_resource path="res://assets/Background/Esileht/Nupp_edasi.png" type="Texture" id=4]
[ext_resource path="res://PauseScene.gd" type="Script" id=5]

[node name="PauseScene" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 190.445
margin_top = 167.889
margin_right = 1717.44
margin_bottom = 928.889
color = Color( 0, 0, 0, 0.454902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitToMain" type="TextureButton" parent="ColorRect"]
pause_mode = 2
margin_left = 327.885
margin_top = 210.671
margin_right = 509.885
margin_bottom = 449.671
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="ColorRect"]
pause_mode = 2
margin_left = 1026.99
margin_top = 218.004
margin_right = 1208.99
margin_bottom = 457.004
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/ExitToMain" to="." method="_on_ExitToMain_pressed"]
[connection signal="pressed" from="ColorRect/Continue" to="." method="_on_Continue_pressed"]
